// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export-externs should accept an artifact that matches 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Extern artifact '<sandbox>/externs.json' matches 3 declarations.",
  ],
}
`;

exports[`export-externs should export html 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Exported 3 externs to '<sandbox>/externs.html'.",
  ],
}
`;

exports[`export-externs should export json 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Exported 3 externs to '<sandbox>/externs.json'.",
  ],
}
`;

exports[`export-externs should export xml 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Exported 3 externs to '<sandbox>/externs.xml'.",
  ],
}
`;

exports[`export-externs should honour an explicit line ending 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Exported 3 externs to '<sandbox>/externs-crlf.json'.",
  ],
}
`;

exports[`export-externs should reject an artifact that drifted 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Execution of command 'export-externs' failed, error: Verify error: Extern JSON artifact '<sandbox>/drifted.json' does not match the parsed declaration manifest.",
  ],
  "stdout": [],
}
`;

exports[`export-externs should write the expected files 1`] = `
[
  {
    "path": "drifted.json",
    "sha256": "a36d06a9cbb07b6b0990fecda0b2202df62ff41d4d5bbd769dc3306e88ed2d77",
    "size": 18,
  },
  {
    "path": "externs-crlf.json",
    "sha256": "c798387584a950eabc2e40279908f8159961da5fa7b936874a3643cdf66d3d20",
    "size": 846,
  },
  {
    "path": "externs-lf.json",
    "sha256": "ab50080082a1c1c67a212ec2f30b9ea7efc3f45962b462e454660071d46e3fdc",
    "size": 806,
  },
  {
    "path": "externs.html",
    "sha256": "ae286bbbbd200f0dbd1eef72a086fad2126cc66438b152ca4ce8a780f88e238f",
    "size": 1534,
  },
  {
    "path": "externs.json",
    "sha256": "cd73d87ff5474dcd2b790a191c1373a8cb5dfb7701b67acb9b5deebd8d872ce0",
    "size": 805,
  },
  {
    "path": "externs.xml",
    "sha256": "9a979393cffce8fe234027f67300abcc974b7f3ef2c8b812fc520d622e7d3595",
    "size": 894,
  },
]
`;
